<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/escolha"/>

    <LinearLayout
        style="@style/AgrupadorBotoes">
        <Button
            style="@style/FIAPButtons"
            android:text="@string/abrir_linearLayout"
            android:id="@+id/btnLinear"
            android:onClick="abrirLinearLayout"/>
        <Button
            style="@style/FIAPButtons"
            android:id="@+id/btnRelative"
            android:text="@string/abrir_relativeLayout"
            android:onClick="abrirRelativeLayout"/>
    </LinearLayout>


    <LinearLayout
        style="@style/AgrupadorBotoes">
        <Button
            style="@style/FIAPButtons"
            android:id="@+id/btnAbsolute"
            android:text="@string/abrir_absoluteLayout"
            android:onClick="abrirAbsoluteLayout"/>

        <Button
            style="@style/FIAPButtons"
            android:id="@+id/btnFrame"
            android:text="@string/abrir_frameLayout"
            android:onClick="abrirFrameLayout"/>
    </LinearLayout>
</LinearLayout>